--- a/src/daterangepicker/daterangepicker.component.scss
+++ b/src/daterangepicker/daterangepicker.component.scss
@@ -205,6 +205,8 @@ $input-height: 3rem !default;
         pointer-events: none;
       }
     }
+
+    width: calc(100% - 2rem);
   }
 
   .calendar-table {
@@ -461,9 +463,14 @@ $input-height: 3rem !default;
     display: flex;
     justify-content: space-around;
     align-items: baseline;
-    padding: 0 4px;
+    padding: 0;
     font-family: kappa,Helvetica Neue,Arial,sans-serif;
     font-weight: 700;
+    margin: {
+      left: 1rem;
+      right: 1rem;
+      bottom: 20px;
+    }
 
     .select-header {
       display: inline-block;
@@ -767,7 +774,7 @@ $input-height: 3rem !default;
         padding-right: 12px;
       }
 
-      .ranges, .calendar {
+      .ranges {
         float: left;
       }
     }
@@ -805,7 +812,7 @@ $input-height: 3rem !default;
         padding-left: 12px;
       }
 
-      .ranges, .calendar {
+      .ranges {
         text-align: right;
         float: right;
       }
