Make End time picker wider

--- a/src/daterangepicker/daterangepicker.component.html
+++ b/src/daterangepicker/daterangepicker.component.html
@@ -255,7 +255,7 @@
             <div class="timepicker d-md-none" *ngIf="timePicker">
                 <ng-container [ngTemplateOutlet]="startTimePickerTpl"></ng-container>
             </div>
-            <div class="timepicker" *ngIf="timePicker">
+            <div class="timepicker flex-grow-1" *ngIf="timePicker">
                 <div class="select-header">END: </div>
                 <div class="select-content">
                     <div class="input-field">
