--- a/src/daterangepicker/daterangepicker.component.html
+++ b/src/daterangepicker/daterangepicker.component.html
@@ -263,7 +263,7 @@
                         <input type="text"
                             name="dateStart" 
                             disabled="true"
-                            class="disabled"
+                            class="disabled o-1"
                             [value]="dateEnd | date:'yyyy-MM-dd'" />    
                     </div>
                     <div class="input-field">
@@ -295,7 +295,7 @@
                 <label for="dateStart">Date</label>
                 <input type="text" 
                 disabled="true"
-                class="disabled"
+                class="disabled o-1"
                 [value]="dateStart | date:'yyyy-MM-dd'" />
             </div>
             <div class="input-field">
