Add element id to allow styling

--- a/src/daterangepicker/daterangepicker.component.html
+++ b/src/daterangepicker/daterangepicker.component.html
@@ -251,7 +251,7 @@
                 </table>
             </div>
         </div>
-        <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-between" id="timepickers-container">
             <div class="timepicker d-md-none" *ngIf="timePicker">
                 <ng-container [ngTemplateOutlet]="startTimePickerTpl"></ng-container>
             </div>
