--- a/src/daterangepicker/daterangepicker.component.html
+++ b/src/daterangepicker/daterangepicker.component.html
@@ -141,7 +141,7 @@
     </div>
 
     <div>
-        <div class="calendar right" *ngIf="showCalInRanges && !singleDatePicker">
+        <div class="calendar right d-none d-md-block" *ngIf="showCalInRanges && !singleDatePicker">
             <div class="calendar-table">
                 <table class="table-condensed" *ngIf="calendarVariables">
                     <thead>
